--- a/Homework/HW3/HW3Q1_3.ipynb
+++ b/Homework/HW3/HW3Q1_3.ipynb
@@ -6,7 +6,7 @@
       "name": "HW3Q1-3.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyN5E/Kf2HMK80TvyhifQ17d",
+      "authorship_tag": "ABX9TyN1+CaRc0mM7zLp7R6mTjSz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -92,7 +92,7 @@
         "\n",
         "---\n",
         "\n",
-        "# Q1: Order the face revisited (30pt)\n",
+        "# Q1: Order the face revisited (20pt)\n",
         " The following dataset contains 33 faces of the same person $(Y\\in \\mathbb{R}^{112\\times 92\\times 33})$ in different angles. You may create a data matrix $\\mathbf{X}\\in \\mathbb{R}^{N\\times D}$, where $N=33, D= 112\\times 92= 10304$. "
       ],
       "metadata": {
@@ -398,7 +398,7 @@
         "---\n",
         "\n",
         "\n",
-        "# Q3: Dimensionality Reduction via Diffusion Maps (40pt)\n",
+        "# Q3: Dimensionality Reduction via Diffusion Maps (50pt)\n",
         "\n",
         "\n",
         "We have two JSON files for the swiss roll dataset. The swiss roll points.json contains 2000 points, each with 3 features and swiss roll labels.json contains labels for each of the 2000 points, ranging from 0 to 1. We used the provided function `read_json_files()` to read the two JSON files containing the data, swiss roll points.json and swiss roll labels.json, and pre-processed the data by centering it (i.e. data points have zero mean). Then, we visualized this data set using a scatter plot where the provided features are $x$, $y$, and $z$ coordinates and each point is colored by its label.\n",
@@ -488,13 +488,13 @@
         "\n",
         "\n",
         "## Q3.1: Diffusion map (*) \n",
-        "Note the Markov transition matrix is defined as $M=D^{-1}W$. Say the matrix $M$ has the following eigen decomposition, $M=\\m{V}\\Lambda \\m{U}^\\top$. Please show \n",
+        "Note the Markov transition matrix is defined as $M=D^{-1}W$. Say the matrix $M$ has the following eigen decomposition, $M=\\m{V}\\Lambda \\m{U}^\\top$. Note $\\m{V}\\m{U}^\\top = \\m{I}$.\n",
+        " Please show \n",
         "\n",
-        "- $\\langle \\m{u}_i, \\m{u}_j\\rangle_{1/\\pi} =\\delta_{ij}. $\n",
+        "- $\\langle \\m{u}_i, \\m{u}_j\\rangle_{D^{-1}} =\\delta_{ij}. $\n",
         "\n",
-        "- $\\langle \\m{v}_i, \\m{v}_j\\rangle_{\\pi} =\\delta_{ij}. $\n",
-        "\n",
-        "where $\\pi$ is the invariant distribution for this Markov chain. "
+        "- $\\langle \\m{v}_i, \\m{v}_j\\rangle_{D} =\\delta_{ij}. $\n",
+        "\n"
       ],
       "metadata": {
         "id": "GhjcNKbNLpvq"
@@ -564,7 +564,7 @@
         "---\n",
         "## Q3.3: Using an Adaptive Gaussian Kernel (**)\n",
         "we will use an adaptive $k$-nearest neighbors kernel to see the effect of using an adaptive Gaussian kernel. Let the $k$-nearest neighbors kernel $\\kappa_{knn}$ be given by\n",
-        "$$\\kappa_{knn}(\\mathbf{x}^{(i)}, \\mathbf{x}^{(j)})=\\frac{1}{2}\\left(\\exp\\left(-\\frac{\\|\\mathbf{x}^{(i)}-\\mathbf{x}^{(j)}\\|}{\\sigma_k(\\mathbf{x}^{(i)})^2}\\right) + \\exp\\left(-\\frac{\\|\\mathbf{x}^{(i)}-\\mathbf{x}^{(j)}\\|}{\\sigma_k(\\mathbf{x}^{(j)})^2}\\right)\\right) $$\n",
+        "$$\\kappa_{knn}(\\mathbf{x}^{(i)}, \\mathbf{x}^{(j)})=\\frac{1}{2}\\left(\\exp\\left(-\\frac{\\|\\mathbf{x}^{(i)}-\\mathbf{x}^{(j)}\\|^2}{\\sigma_k(\\mathbf{x}^{(i)})^2}\\right) + \\exp\\left(-\\frac{\\|\\mathbf{x}^{(i)}-\\mathbf{x}^{(j)}\\|^2}{\\sigma_k(\\mathbf{x}^{(j)})^2}\\right)\\right) $$\n",
         "\n",
         "where $\\sigma_k(\\mathbf{x})$ is the distance from $\\mathbf{x}$ to its $k$th nearest neighbor. Note that $\\kappa_{knn}$ satisfies the properties of a kernel. Let $\\sigma_{knn}=\\{\\sigma_1, \\dots, \\sigma_N\\}$ denote these choices of adaptively chosen kernel parameters, for a fixed $k$. Now that we have defined this new adaptive kernel, let's see how it performs differently that a fixed-width\n",
         "kernel.\n"
@@ -661,6 +661,140 @@
       ],
       "metadata": {
         "id": "RIFkInZwd1NW"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Optional problem: Infinitesimal generator (***)\n",
+        "We will calculate the infinitesimal generators for the different diffusion maps characterized by the parameter $\\alpha$. \n",
+        "\n",
+        "**Given** the dataset $\\m{X}$ consists of a Riemannian manifold with the density $\\mu(\\m{x})=\\exp(-U(\\m{x}))$ and let $\\kappa_\\epsilon(\\m{x},\\m{y})$ is a Gaussian kernel (unit normalized kernel). \n",
+        "\n",
+        "Here is **what we know**: If $\\kappa_\\epsilon$ scaled appropriately, then for any function $\\phi$ on the domain $\\Omega$, \n",
+        "$$ \\int_\\Omega \\kappa_\\epsilon (\\m{x}, \\m{y})\\phi(\\m{y})d \\m{y}=\\phi(\\m{x})+\\epsilon \\left(\\Delta \\phi(\\m{x})+q(\\m{x})\\phi(\\m{x})\\right) +O(\\epsilon^{3/2})$$\n",
+        "where $q$ is a function that depends on the Riemannian geometry of the manifold and its embedding in $\\mb{R}^D$. \n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "vfEVwOF_3Lnx"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "---\n",
+        "Please show the following step-by-step.\n",
+        "### Step 1.\n",
+        " Define the normalization factor $p_\\epsilon(\\m{x})$ as follows,\n",
+        "$$p_\\epsilon(\\m{x})=\\int_{\\Omega}\\kappa_\\epsilon(\\m{x},\\m{y})\\mu(\\m{y})d\\m{x} $$\n",
+        "Show for $\\alpha\\ge 0$,\n",
+        "$$ p_\\epsilon^{-\\alpha}= \\mu^{-\\alpha}\\left(1-\\alpha\\epsilon \\left(\\frac{\\nabla \\mu}{\\mu}+q\\right)\\right)(1+O(\\epsilon^{3/2}))$$\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "MvcttGJf8eOi"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Your answer: "
+      ],
+      "metadata": {
+        "id": "-kApbeIv8giP"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "---\n",
+        "\n",
+        "\n",
+        "### Step 2. \n",
+        "Define the family of symmetric kernels with parameter $\\alpha$, \n",
+        "$$ \\kappa_\\epsilon^{(\\alpha)}(\\m{x}, \\m{y})=\\frac{\\kappa_\\epsilon(\\m{x},\\m{y})}{p^\\alpha_{\\epsilon}(\\m{x})p^\\alpha_{\\epsilon}(\\m{y})}$$\n",
+        "Show the normalization factor $d_\\epsilon^{(\\alpha)}$ is \n",
+        "\\begin{align} \n",
+        "d_\\epsilon^{(\\alpha)}(\\m{x})&\\triangleq\\int_\\Omega \\kappa_\\epsilon^{(\\alpha)}(\\m{x},\\m{y})\\mu(\\m{y})d \\m{y} \\\\\n",
+        "& =p_\\epsilon^{-\\alpha}\\mu^{1-\\alpha}\\left[ 1+\\epsilon \\left((1-\\alpha)q-\\alpha \\frac{\\Delta \\mu}{\\mu} +\\frac{\\Delta (\\mu^{1-\\alpha})}{\\mu^{1-\\alpha}}\\right)\\right]\n",
+        "\\end{align}\n",
+        "\n",
+        "## Your answer:"
+      ],
+      "metadata": {
+        "id": "ZRMA_0zN8jjy"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "---\n",
+        "### Step 3. \n",
+        "Define the family of the backward operator with parameter $\\alpha$, and show the asymptotic expansion is \n",
+        "\\begin{align}\n",
+        "T_b^{(\\alpha)} \\phi &\\triangleq \\int_\\Omega \\frac{\\kappa_\\epsilon^{(\\alpha)}(\\m{x}, \\m{y}) }{d_\\epsilon^{(\\alpha)}(\\m{x})}\\phi(\\m{y})\\mu(\\m{y})d \\m{y} \\\\\n",
+        "&= \\phi + \\epsilon \\left(\\frac{\\Delta (\\phi \\mu^{1-\\alpha})}{\\mu^{1-\\alpha}}-\\phi \\frac{\\Delta \\mu^{1-\\alpha}}{\\mu^{1-\\alpha}}\\right)\n",
+        "\\end{align}\n",
+        "Then its infinitesimal generator is \n",
+        "$$L_b \\phi = \\lim_{\\epsilon\\rightarrow 0}\\frac{T_b^{(\\alpha)}-I}{\\epsilon}\\phi= \\frac{\\Delta (\\phi \\mu^{1-\\alpha})}{\\mu^{1-\\alpha}}-\\phi \\frac{\\Delta \\mu^{1-\\alpha}}{\\mu^{1-\\alpha}}$$\n",
+        "Insert $\\mu(\\m{x})=\\exp(-U(\\m{x}))$, show it gives \n",
+        "$$L_b \\phi =\\Delta \\phi -2(1-\\alpha)\\nabla \\phi \\cdot \\nabla U $$"
+      ],
+      "metadata": {
+        "id": "bR2aegd4Bl9j"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Your answer:"
+      ],
+      "metadata": {
+        "id": "pdXPlrSBFmd-"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "---\n",
+        "\n",
+        "\n",
+        "### Step 4. (Optional out of optional)\n",
+        "\n",
+        "Define the family of the forward operator with parameter $\\alpha$, \n",
+        "\\begin{align}\n",
+        "T_f^{(\\alpha)}\\varphi = &\\triangleq \\int_\\Omega \\frac{\\kappa_\\epsilon^{(\\alpha)}(\\m{x}, \\m{y}) }{d_\\epsilon^{(\\alpha)}(\\m{y})}\\varphi(\\m{y})\\mu(\\m{y})d \\m{y}.\n",
+        "\\end{align}\n",
+        "Its infinitesimal generator is defined as \n",
+        "\\begin{align}\n",
+        "L_f\\varphi = \\lim_{\\epsilon\\rightarrow 0} \\frac{T_b^{(\\alpha)}-I}{\\epsilon}\\varphi\n",
+        "\\end{align}\n",
+        "Show the infinitestimal generator for the forward operator with $\\mu(\\m{x})=\\exp(-U(\\m{x}))$ is \n",
+        "\\begin{align}\n",
+        "L_f\\varphi = \\Delta \\varphi -2\\alpha \\nabla \\varphi \\cdot \\nabla U+(2\\alpha-1)\\varphi (\\nabla U\\cdot \\nabla U-\\Delta U)\n",
+        "\\end{align}"
+      ],
+      "metadata": {
+        "id": "RsL0UaACBfo7"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Your answer:"
+      ],
+      "metadata": {
+        "id": "HasN49zPENbS"
       }
     }
   ]
